<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_country"
                android:textColor="@color/app_text_ui_color_grey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/france"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/fr"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/england"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/gb"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/germany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/de"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/china"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/cn"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/italy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/it"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/unitedStates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_green"
                    android:padding="7dp"
                    android:text="@string/us"
                    android:textColor="@color/green_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/app_layout_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/search_by_categories"
                android:textColor="@color/app_text_ui_color_grey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/business"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/health"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/general"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/entertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/entertainment"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/science"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="13dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hollow_bg_blue"
                    android:padding="7dp"
                    android:text="@string/sports"
                    android:textColor="@color/blue_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/app_layout_divider_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/search_by_publishers"
                android:textColor="@color/app_text_ui_color_grey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/api_error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/hollow_bg_black"
                android:padding="7dp"
                android:textColor="@color/red_color"
                android:textSize="17sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sourcesRecView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
